<resources>
    <string name="app_name">CareTime</string>
    <string name="quote">quote</string>
    <string name="home">home</string>
    <string name="settings">settings</string>
    <string name="track_your_health">Track your life:</string>
    <string name="content_description_sleep">Sleep icon</string>
    <string name="content_description_water">Water icon</string>
    <string name="content_description_activity">Activity icon</string>
    <string name="content_description_vitamins">Vitamins icon</string>
    <string name="sleep">Sleep</string>
    <string name="water">Water</string>
    <string name="activity">Activity</string>
    <string name="mood">Mood</string>
    <string name="nutrition">Nutrition</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="Settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="stats_headline">Stats</string>
    <string name="january">january</string>
    <string name="february">february</string>
    <string name="march">march</string>
    <string name="april">april</string>
    <string name="may">may</string>
    <string name="june">june</string>
    <string name="july">july</string>
    <string name="august">august</string>
    <string name="september">september</string>
    <string name="october">october</string>
    <string name="november">november</string>
    <string name="december">december</string>

    <string name="settings_screen_select_dark_theme">Dark theme</string>
    <string name="send_feedback">Send feedback</string>
    <string name="send_feedback_text">Report technical issues or suggest new features</string>
    <string name="settings_design">Design</string>
    <string name="settings_notifications">Enable message notifications</string>
    <string name="settings_help">Help</string>


    <string-array name="view_pager_headlines">
        <item>Track your well-being</item>
        <item>Get daily quote</item>
        <item>Unlock new trackers</item>
        <item>Improve your life</item>
    </string-array>
    <string-array name="view_pager_descriptions">
        <item>With the help of trackers, evaluate your physical and moral condition, get statistics for each month in the form of a convenient chart</item>
        <item>Daily quotes will help you keep motivated and continue the path of taking care of your own health</item>
        <item>Complete various tasks in the app and open access to new trackers</item>
        <item>Start a healthy lifestyle to enhance productivity and achieve the bravest goals</item>
    </string-array>
    <string name="wf_addition">This is your safe place for self care and work on yourself</string>
    <string name="wf_title">Welcome to the CareTime!</string>
    <string name="wf_hint">swipe right to continue>></string>
    <string name="wf_skip"><u>skip</u></string>
    <string name="ff_lets_begin">Let’s begin!</string>
    <string name="ff_start">start</string>
</resources>