<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemActivity"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/main_green">


    <TextView
        android:id="@+id/tv_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playfairdisplay_bold"
        android:text="@string/sleep"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:text="@string/plus"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_headline"/>

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:text="@string/minus"
        android:textColor="#616161"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_headline"
        app:layout_constraintEnd_toStartOf="@+id/btn_plus" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="99dp" />

    <TextView
        android:id="@+id/tv_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="current/max" />


</LinearLayout>