<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentItem"
    android:id="@+id/fragment_item"
    android:orientation="vertical"
    android:background="@color/main_green"
    android:padding="50dp">

    <TextView
        android:id="@+id/tv_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playfairdisplay_extrabold"
        android:text="@string/sleep"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/plus"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/minus"
        android:textColor="#616161"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_plus"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_pb_and_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_headline">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="50" />

        <TextView
            android:id="@+id/tv_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="current/max"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/playfairdisplay_medium"
            android:gravity="end"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_pb_and_points"></LinearLayout>

    <TextView
        android:id="@+id/tv_headline_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_headline"
        android:textSize="27sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/playfairdisplay_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_stats" />

    <TextView
        android:id="@+id/tv_dates_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="17 may - 24 may"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@font/playfairdisplay_medium"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_headline_stats"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_all_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Stats stats stats stats stats stats stats stats stats stats stats stats stats"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_headline_stats" />

</androidx.constraintlayout.widget.ConstraintLayout>